--- a/build-an-expense/index-split.html
+++ b/build-an-expense/index-split.html
@@ -28,61 +28,40 @@
   <!-- Custom Styles -->
   <link rel='stylesheet' href='styles.css'>
 </head>
-<body class="bg-gray-50 text-gray-900 font-sans">
-  <div class="min-h-screen">
-    <!-- Header -->
-    
-      <div class="max-w-4xl mx-auto px-4 py-4">
-        <div class="flex items-center justify-between">
-          <div class="flex items-center space-x-3">
-            <div class="bg-blue-600 p-2 rounded-lg">
-              <i data-lucide="wallet" class="w-6 h-6 text-white"></i>
-            </div>
-            <h1 class="text-xl font-bold text-gray-900">Expense Tracker</h1>
-          </div>
-          <button onclick="router.navigate('new')" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors flex items-center space-x-2">
-            <i data-lucide="plus" class="w-4 h-4"></i>
-            <span>Add Expense</span>
-          </button>
-        </div>
+<body class='bg-gradient-to-br from-slate-50 to-blue-50 min-h-screen'>
+  <!-- Fixed Navigation -->
+  <nav class='fixed top-0 left-0 right-0 z-50 bg-white/80 backdrop-blur-md border-b border-slate-200 shadow-sm'>
+    <div class='max-w-7xl mx-auto px-6 py-4 flex items-center justify-between'>
+      <h1 class='text-2xl font-bold bg-gradient-to-r from-blue-600 to-indigo-600 bg-clip-text text-transparent'>
+        ExpenseTracker
+      </h1>
+      <div class='flex items-center gap-4'>
+        <button onclick='router.navigate("")' class='text-slate-600 hover:text-blue-600 transition-colors font-medium'>
+          <i data-lucide='home' class='w-5 h-5 inline mr-1'></i>
+          Dashboard
+        </button>
+        <button onclick='router.navigate("list")' class='text-slate-600 hover:text-blue-600 transition-colors font-medium'>
+          <i data-lucide='list' class='w-5 h-5 inline mr-1'></i>
+          Expenses
+        </button>
+        <button onclick='router.navigate("new")' class='bg-gradient-to-r from-blue-600 to-indigo-600 text-white px-4 py-2 rounded-xl shadow-lg shadow-blue-500/30 hover:shadow-xl hover:scale-105 transition-all duration-200 font-medium'>
+          <i data-lucide='plus' class='w-4 h-4 inline mr-1'></i>
+          Add
+        </button>
       </div>
-    
+    </div>
+  </nav>
 
-    <!-- Navigation -->
-    <nav class="bg-white border-b">
-      <div class="max-w-4xl mx-auto px-4">
-        <div class="flex space-x-1">
-          <button onclick="router.navigate('')" class="nav-tab" id="nav-dashboard">
-            <i data-lucide="bar-chart-3" class="w-4 h-4"></i>
-            <span>Dashboard</span>
-          </button>
-          <button onclick="router.navigate('list')" class="nav-tab" id="nav-list">
-            <i data-lucide="list" class="w-4 h-4"></i>
-            <span>Expenses</span>
-          </button>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Main Content -->
-    <main class="max-w-4xl mx-auto px-4 py-6">
-      <div id="app-content">
-        <!-- Dynamic content loaded here -->
-      </div>
-    </main>
-  </div>
-
-  <!-- Loading overlay -->
-  <div id="loading" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
-    <div class="bg-white p-6 rounded-lg">
-      <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600 mx-auto"></div>
-      <p class="mt-2 text-sm text-gray-600">Processing...</p>
+  <!-- Main Content -->
+  <div class='pt-20 pb-8'>
+    <div class='max-w-7xl mx-auto px-6'>
+      <div id='app-content'></div>
     </div>
   </div>
 
-  <!-- CDN Scripts -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/lucide@latest"></script>
+  <!-- Scripts -->
+  <script src='https://cdn.tailwindcss.com'></script>
+  <script src='https://unpkg.com/lucide@latest'></script>
 
   <!-- App Script -->
   <script src='app.js'></script>
